<?xml version="1.0"?>
<package format="2">
  <name>kubot_imu</name>
  <version>1.1.2</version>
  <description>
  The KUBOT Robot IMU package.
  </description>
	<maintainer email="YunHong.Wang@ShanYangYe.com">Yun Hong</maintainer>

	<license>Apache 2.0</license>

	<!-- KUBOT ROS1  -->
	<author>KUBOT</author>
	<author email="t105408001@ntut.org.tw">Yun Hong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>kubot_msgs</buildtool_depend>

  <export>
  </export>
</package>